make audio preload

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <img id="game_start" src="./flappybird/text_ready.png">
     <img id="tab_start" src="./flappybird/tutorial.png">
     <div>
-        <audio id="sound1" src="sound1.wav"/>
-        <audio id="sound2" src="sound2.wav"/>
-        <audio id="sound3" src="sound3.wav"/>
+        <audio id="sound1" src="sound1.wav" preload="auto"/>
+        <audio id="sound2" src="sound2.wav" preload="auto"/>
+        <audio id="sound3" src="sound3.wav" preload="auto"/>
     </div>
 </div>
 </body>
