--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img id="bird1" src="./flappybird/bird0_0.png">
     <img id="bird2" src="./flappybird/bird0_1.png">
     <img id="bird3" src="./flappybird/bird0_2.png">
-    <img id="back" src="./flappybird/bg_day.png">
+    <img id="back" src="./flappybird/bg_night.png">
     <img id="land" src="./flappybird/land.png">
     <img id="pipe_up" src="./flappybird/pipe_up.png">
     <img id="pipe_down" src="./flappybird/pipe_down.png">
