--- a/zh/installation.html
+++ b/zh/installation.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>安装 | Slim</title>
     <meta name="description" content="Slim: Centralized State Management With Proxy, State-Non-Editable.">
+    <link rel="slim icon" type="image/x-icon" href="./favicon.ico">
     
-    
-    <link rel="preload" href="/slimdocs/assets/css/0.styles.a9dfea48.css" as="style"><link rel="preload" href="/slimdocs/assets/js/app.f6a03a96.js" as="script"><link rel="preload" href="/slimdocs/assets/js/16.5c9f0dc0.js" as="script"><link rel="prefetch" href="/slimdocs/assets/js/10.9f74d3b3.js"><link rel="prefetch" href="/slimdocs/assets/js/11.9d820fcc.js"><link rel="prefetch" href="/slimdocs/assets/js/12.3220bfd5.js"><link rel="prefetch" href="/slimdocs/assets/js/13.84e12a74.js"><link rel="prefetch" href="/slimdocs/assets/js/14.a3c12876.js"><link rel="prefetch" href="/slimdocs/assets/js/15.412eda9d.js"><link rel="prefetch" href="/slimdocs/assets/js/17.d3d768ef.js"><link rel="prefetch" href="/slimdocs/assets/js/18.c8372d42.js"><link rel="prefetch" href="/slimdocs/assets/js/19.85a987a3.js"><link rel="prefetch" href="/slimdocs/assets/js/2.0982581a.js"><link rel="prefetch" href="/slimdocs/assets/js/20.dac8a89b.js"><link rel="prefetch" href="/slimdocs/assets/js/21.4b4c6e5c.js"><link rel="prefetch" href="/slimdocs/assets/js/22.af158a43.js"><link rel="prefetch" href="/slimdocs/assets/js/23.57b39cc2.js"><link rel="prefetch" href="/slimdocs/assets/js/3.3e78496b.js"><link rel="prefetch" href="/slimdocs/assets/js/4.565d9458.js"><link rel="prefetch" href="/slimdocs/assets/js/5.65c20bc6.js"><link rel="prefetch" href="/slimdocs/assets/js/6.32596b3d.js"><link rel="prefetch" href="/slimdocs/assets/js/7.b3d06d52.js"><link rel="prefetch" href="/slimdocs/assets/js/8.b3f744fa.js"><link rel="prefetch" href="/slimdocs/assets/js/9.a3d40b7a.js">
+    <link rel="preload" href="/slimdocs/assets/css/0.styles.a9dfea48.css" as="style"><link rel="preload" href="/slimdocs/assets/js/app.66ef309c.js" as="script"><link rel="preload" href="/slimdocs/assets/js/16.5c9f0dc0.js" as="script"><link rel="prefetch" href="/slimdocs/assets/js/10.9f74d3b3.js"><link rel="prefetch" href="/slimdocs/assets/js/11.9d820fcc.js"><link rel="prefetch" href="/slimdocs/assets/js/12.3220bfd5.js"><link rel="prefetch" href="/slimdocs/assets/js/13.84e12a74.js"><link rel="prefetch" href="/slimdocs/assets/js/14.a3c12876.js"><link rel="prefetch" href="/slimdocs/assets/js/15.412eda9d.js"><link rel="prefetch" href="/slimdocs/assets/js/17.d3d768ef.js"><link rel="prefetch" href="/slimdocs/assets/js/18.c8372d42.js"><link rel="prefetch" href="/slimdocs/assets/js/19.85a987a3.js"><link rel="prefetch" href="/slimdocs/assets/js/2.0982581a.js"><link rel="prefetch" href="/slimdocs/assets/js/20.dac8a89b.js"><link rel="prefetch" href="/slimdocs/assets/js/21.4b4c6e5c.js"><link rel="prefetch" href="/slimdocs/assets/js/22.af158a43.js"><link rel="prefetch" href="/slimdocs/assets/js/23.57b39cc2.js"><link rel="prefetch" href="/slimdocs/assets/js/3.3e78496b.js"><link rel="prefetch" href="/slimdocs/assets/js/4.565d9458.js"><link rel="prefetch" href="/slimdocs/assets/js/5.65c20bc6.js"><link rel="prefetch" href="/slimdocs/assets/js/6.32596b3d.js"><link rel="prefetch" href="/slimdocs/assets/js/7.b3d06d52.js"><link rel="prefetch" href="/slimdocs/assets/js/8.b3f744fa.js"><link rel="prefetch" href="/slimdocs/assets/js/9.a3d40b7a.js">
     <link rel="stylesheet" href="/slimdocs/assets/css/0.styles.a9dfea48.css">
   </head>
   <body>
@@ -39,6 +39,6 @@ Unpkg.com 提供了基于 NPM 的 CDN 链接。以上的链接会一直指向 NP
         </a>
         →
       </span></p></div> </div> <!----></div></div>
-    <script src="/slimdocs/assets/js/app.f6a03a96.js" defer></script><script src="/slimdocs/assets/js/16.5c9f0dc0.js" defer></script>
+    <script src="/slimdocs/assets/js/app.66ef309c.js" defer></script><script src="/slimdocs/assets/js/16.5c9f0dc0.js" defer></script>
   </body>
 </html>
